fixed message overflow

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -69,7 +69,7 @@ color:black;
 .message-list{
     position: static;
     transition: .3s;
-    width: 98%;
+    width: 96%;
     padding-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
@@ -110,26 +110,28 @@ color:black;
     border-bottom: 1px #e3e3e36b solid;
     margin-bottom: 2px;
     padding: 6px;
-    width: 100%;
+    width: 70%;
 }
 
 .message-container{
     position: relative;
     border-radius: 5px;
     box-shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
-    height: 90vh;
-    width: 85%;
+    height: 70vh;
+    width: 80%;
     overflow: hidden;
-    float: right;
     transition: all .3s ease;
     background-color: #fff;
 }
 @media only screen and (min-width: 999px) {
     .message-container{
         width: 30%;
-        height: 85vh;
-        top: 0px;
+      
         overflow: scroll;
+    }
+    .message-list{
+        width: 90%;
+        margin-left: 2%;
     }
     .close{
         color: #fff;
